[workspace]
members = [
    "bmt",
    "manifest",
    "postage",
    "swarm-tools",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_with = { version = "2.0.0", features = ["hex"] }
hex = "0.4.3"
rand = "0.8.5"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
futures = "0.3.21"
async-recursion = "1.0.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
async-trait = "0.1.57"
thiserror = "1.0.32"
