[workspace]
members = [
    "crates/bmt",
    "crates/manifest",
    "crates/postage",
    "crates/logging",
    "bin/waku-swarm-relay",
    "bin/swarm-tools",
    "bin/bee-rs",
]
default-members = [
    "bin/bee-rs",
    "bin/waku-swarm-relay",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://rndlabs.github.io/bee-rs"
repository = "https://github.com/rndlabs/bee-rs"

# Like release, but with full debug symbols. Use for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]
## crypto
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

## eth
ethers-core = { version = "2.0.7", default-features = false }
ethers-providers = { version = "2.0.7", default-features = false }
ethers-signers = { version = "2.0.7", default-features = false }
ethers-middleware = { version = "2.0.7", default-features = false }
ethers-contract = { version = "2.0.7", default-features = false }

## misc
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "ansi", "fmt", "std", "json",] }
thiserror = "1.0.32"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"

## tokio
tokio-stream = "0.1.14"
tokio = { version = "1.28.1", default-features = false }
tokio-util = { version = "0.7.8", features = ["codec"] }

## async
async-trait = "0.1.57"
futures = "0.3.21"

clap = { version = "4.3.0", features = ["derive", "env"] }
chrono = "0.4.23"
dotenv = "0.15.0"
serde_with = { version = "3.0.0", features = ["hex"] }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
async-recursion = "1.0.0"
anyhow = "1.0.71"
prost = "0.11.6"
once_cell = "1.17.1"