[package]
name = "manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }
const_format = "0.2.26"
rand = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-recursion = { workspace = true }
tiny-keccak = { workspace = true }
async-trait = { workspace = true }
# bee_api = { path = "../bee_api" }
bee_api = { git = "https://github.com/rndlabs/bee-api-rs.git" }
thiserror = { workspace = true }
lru = "0.7.8"

[dev-dependencies]
test-case = "2.2.1"