[package]
name = "postage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmt = { path = "../bmt" }
chrono = { workspace = true }
ethers-core = { workspace = true }
ethers-signers = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
lazy_static = "1.4.0"
tiny-keccak = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }